[fix] remove horizontal scroll bar on mobile and width of search form

--- a/src/css/searxng.css
+++ b/src/css/searxng.css
@@ -2358,6 +2358,7 @@ article.result-images .detail {
   display: block;
   border-collapse: separate;
   box-sizing: border-box;
+  width: 1.6em;
   margin: 0;
   padding: 8px 2px;
   background: none repeat scroll 0 0 var(--color-search-background);
@@ -2468,7 +2469,7 @@ article.result-images .detail {
     padding: 0;
   }
   .search_box {
-    width: 99%;
+    width: 98%;
     margin: 0.1em;
     padding: 0 0.1em 0 0;
     display: flex;
